fixes unexpected rendering issues with progress bar. note: uncovered unexpected stencil rendering behavior. appears to be async

--- a/src/components/progress-bar/progress-bar.css
+++ b/src/components/progress-bar/progress-bar.css
@@ -2,5 +2,8 @@
   display: block;
 }
 .canvas-container{
-  max-width: 500px;
+  display: flex;
+  position: relative;
+  width: 80vw;
+  height: 20px;
 }
